# kf-otel-demo

./: .gitignore  Installation.md  kind-torch-minimal-otel.ipynb  kind-trainer-cluster.yaml  kubeflow-otel-showcase.ipynb  main.py  pyproject.toml
